less/article.less
@import (reference) "../affresco/less/ksf-colors.less";
@import (reference) "_grid";
@import (reference) "_breakpoints";

@article-side-margin: 96px;
@full-width-image: @content-block * 6; // == 1920px

.mosaico-article.advertorial-standard {
  grid-template-areas:
    ". head  head  head  ."
    "image image image image image"
    ". body  body  body  .";
}

.mosaico-article {
  grid-area: article;
  display: grid;
  grid-template-areas:
    "breaking"
    "head"
    "image"
    "body";

  margin-left: 12px;
  margin-right: 12px;

  @media (max-width: 350px) {
    display: block;
  }
  @media (min-width: @breakpoint-2col) {
    grid-template-areas:
      "breaking"
      "head"
      "image"
      "body";
  }
  @media (min-width: @breakpoint-3col) {
    grid-template-columns: @mosaico-grid-columns;
    grid-template-areas:
      ". breaking breaking breaking ."
      ". head  head  head  ."
      ". image image image ."
      ". body  body  body  .";
  }
  > header {
    grid-area: head;
    margin-bottom: 15px;
    @media (min-width: @breakpoint-3col) {
      margin-left: @article-side-margin;
      margin-right: @article-side-margin;
    }
  }
  &__main-image {
    grid-area: image;
    margin-bottom: 30px;
    .wrapper {
      height: 66vw;
      margin-left: -12px;
      margin-right: -12px;
      overflow: hidden;
      @media (min-width: @breakpoint-2col) {
        margin: 0;
      }
      @media (min-width: @breakpoint-3col) {
        width: 960px;
        height: 640px;
      }
      img {
        object-position: 50% 50%;
        object-fit: cover;
        width: 100%;
        height: 100%;
      }
    }
  }
  .mosaico-article__main-image__caption {
    font: 400 14px "Roboto", sans-serif;
    color: @grey-medium;
    padding: 10px 0;

    .byline {
      font-weight: 500;
      font-size: 0.9em;
      color: black;
      text-transform: uppercase;
      margin-left: 5px;
    }
  }
  &__main-image.full-width {
    @media (min-width: @breakpoint-3col) {
      display: grid;
      grid-template-columns: @mosaico-grid-columns;
      grid-template-areas:
        "image image image image image"
        "caption caption  caption  caption caption";
    }
    @media (min-width: @full-width-image) {
      grid-template-columns: 1fr @full-width-image 1fr;
      grid-template-areas:
        ". image ."
        ". caption .";
    }
    .wrapper {
      height: unset;
      @media (min-width: @breakpoint-3col) {
        width: unset;
        max-width: @full-width-image;
        grid-area: image;
      }
    }
    .mosaico-article__main-image__caption {
      @media (min-width: @breakpoint-3col) {
        grid-area: caption;
        margin-left: 10px;
      }
    }
  }

  &__main {
    grid-area: body;
    @media (min-width: @breakpoint-3col) {
      margin-left: @article-side-margin;
    }
    @media (min-width: @breakpoint-2col) {
      display: grid;
      grid-template-areas:
        "articlemetabyline"
        "articlebody";
      grid-template-columns: 1fr 300px;
      grid-template-rows: auto 1fr;
      grid-template-areas:
        "articlemetabyline articlesidebar"
        "articlebody articlesidebar";
    }
  }
  &__body {
    grid-area: articlebody;
    @media (min-width: @breakpoint-2col) {
      padding-right: 30px;
    }
    @media (min-width: @breakpoint-3col) {
      width: 530px;
      box-sizing: content-box;
    }
    .spinner--loading-spinner {
      background: initial;
    }
  }
  &__aside {
    @media (min-width: @breakpoint-2col) {
      grid-area: articlesidebar;
    }
  }

  &__headline {
    font: 700 1.92rem "Duplex Serif Web", serif;
    color: #333;
    margin: 1rem auto 1.5rem auto;
    @media (min-width: @breakpoint-2col) {
      font-size: 2.75rem;
    }
    @media (min-width: @breakpoint-3col) {
      font-size: 3.75rem;
    }
  }
  &__premium {
    padding: 2px 5px;
    color: #fff;
    display: inline-block;
    text-transform: uppercase;
    font: 500 0.75rem "Roboto", sans-serif;
  }
  &__preamble {
    font: 300 1.4rem/1.2 "Duplex Sans", sans-serif;
    margin-bottom: 30px;
    @media (min-width: @breakpoint-2col) {
      font-size: 1.5rem;
    }
    @media (min-width: @breakpoint-3col) {
      font-size: 1.6rem;
    }
  }
  &__tag-n-share {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    @media (min-width: 400px) {
      flex-direction: row;
    }
  }
  &__tag-n-premium {
    display: flex;
    justify-content: center;
    align-items: baseline;
    flex-wrap: wrap;
    @media (min-width: 400px) {
      justify-content: flex-start;
    }
    a {
      margin-right: 5px;
      @media (min-width: @breakpoint-3col) {
        font-size: 0.9rem;
      }
    }
  }
}

.article-element {
  margin-bottom: 1rem;
  font: 400 1.07rem/1.5 "Roboto", sans-serif;
  &__html {
    color: @dark-text;
    a {
      color: @dark-text;
      text-decoration-style: solid;
      text-decoration-line: underline;
      text-decoration-thickness: 2px;
      #HBL & {
        text-decoration-color: @hbl-orange;
      }
      #VN & {
        text-decoration-color: @vn-red;
      }
      #ON & {
        text-decoration-color: @on-blue;
      }
      #BRAND-NEUTRAL & {
        text-decoration-color: @brand-neutral !important;
      }
      &:hover {
        color: lighten(@dark-text, 20%);
      }
    }
  }
  &__question {
    font-size: 1.1rem;
    font-style: italic;
    font-weight: 400;
    a {
        text-decoration: solid underline 2px var(--brand-color);
    }
  }
  &__footnote {
    font-style: italic;
    color: @grey-mediumlight;
    &::before {
      content: "";
      display: block;
      margin: 10px auto 5px 0;
      width: 10%;
      height: 2px;
      #HBL & {
        background-color: @hbl-orange;
      }
      #VN & {
        background-color: @vn-red;
      }
      #ON & {
        background-color: @on-blue;
      }
      #BRAND-NEUTRAL & {
        background-color: @brand-neutral !important;
      }
    }
    a {
      text-decoration-style: solid;
      text-decoration-line: underline;
      text-decoration-thickness: 2px;
      #HBL & {
        text-decoration-color: @hbl-orange;
      }
      #VN & {
        text-decoration-color: @vn-red;
      }
      #ON & {
        text-decoration-color: @on-blue;
      }
      #BRAND-NEUTRAL & {
        text-decoration-color: @brand-neutral !important;
      }
      &:hover {
        color: lighten(@dark-text, 20%);
      }
    }
  }
  &__quote {
    display: block;
    margin: 30px auto;
    padding: 15px 30px;
    font: 1.5rem/1.5 "Duplex Serif Light Web", serif;
    text-align: center;
    #HBL & {
      color: @hbl-orange;
    }
    #VN & {
      color: @vn-red;
    }
    #ON & {
      color: @on-blue;
    }
    #BRAND-NEUTRAL & {
      color: @brand-neutral !important;
    }
    &::before {
      content: "";
      display: block;
      width: 20%;
      height: 2px;
      margin: 0 auto 15px auto;
      #HBL & {
        background-color: @hbl-orange;
      }
      #VN & {
        background-color: @vn-red;
      }
      #ON & {
        background-color: @on-blue;
      }
      #BRAND-NEUTRAL & {
        background-color: @brand-neutral !important;
      }
    }
    figcaption {
      color: @grey-mediumlight;
      font: 1.1rem/1 "Duplex Sans", sans-serif;
      margin-top: 10px;
      &:before {
        content: "—";
        color: inherit;
        margin-right: 3px;
      }
    }
  }
  &__subheadline {
    font: 500 1.07rem/1.5rem "Roboto", sans-serif;
    margin-top: 30px;
    margin-bottom: 10px;
  }
  ul, ol {
    list-style: revert;
    padding: revert;
    margin: revert;
  }
  &__related {
    display: block;
    margin: 30px auto;
    padding: 0 30px 0 15px;
    ul {
      list-style: none;
      margin: 0;
      padding: 0;
      margin-top: 5px;
      li {
        border-left: 4px solid;
        #HBL & {
          border-color: @hbl-orange;
        }
        #VN & {
          border-color: @vn-red;
        }
        #ON & {
          border-color: @on-blue;
        }
        #BRAND-NEUTRAL & {
          border-color: @brand-neutral !important;
        }
        margin-bottom: 3px;
        a {
          display: inline-block;
          margin-left: 10px;
          text-decoration: none;
          color: black;
        }
      }
      li:first-child {
        margin-top: 5px;
      }
    }
    ul::before {
      content: "LÄS OCKSÅ";
      #HBL & {
        color: @hbl-orange;
      }
      #VN & {
        color: @vn-red;
      }
      #ON & {
        color: @on-blue;
      }
      #BRAND-NEUTRAL & {
        color: @brand-neutral !important;
      }
    }
  }
  iframe {
    max-width: 100%;
  }
}

.mosaico-article__focus-image {
  position: fixed;
  right: 0;
  left: 0;
  top: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.8);
  z-index: 300;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;

  .wrapper {
    position: relative;
    height: 80%;
  }

  img {
    max-height: 100%;
    max-width: 100%;
    height: auto;
    width: auto;
    display: block;
    margin: 0 auto;
  }
  .caption :extend(.mosaico-article__main-image__caption) {
    width: 100%;

    padding: 10px;
    padding-left: 0;
    color: white;

    .byline {
      color: white;
    }
  }
  &__close-button {
    position: absolute;
    top: 10px;
    right: 10px;
    width: 40px;
    height: 40px;
    cursor: pointer;

    mask-image: url("../images/icon-mosaico-menu-close.svg");
    -webkit-mask-image: url("../images/icon-mosaico-menu-close.svg");
    mask-position: 0 0;
    mask-size: 40px 40px;
    mask-repeat: no-repeat;
    -webkit-mask-position: 0 0;
    -webkit-mask-size: 40px 40px;
    -webkit-mask-repeat: no-repeat;
    background-size: 40px;
    background-repeat: no-repeat;
    background-position: center;
    background-color: white;
  }
}

.mosaico .vetrina--payment-wrapper {
  z-index: 1000;
}

.mosaico .vetrina--container {
  @media (min-width: @breakpoint-3col) {
    grid-template-columns: 3em minmax(auto,600px) 3em;
  }
}

.mosaico .mosaico-article__body .spinner--loading-spinner {
  background: initial;
  height: 100px;
}

.ksf-bright-star,
.ksf-dim-star {
  position: relative;
  top: 1px;
  display: inline-block;
  font-family: "Glyphicons Halflings";
  font-style: normal;
  font-weight: normal;
  line-height: 1;
}

.ksf-bright-star::before {
  content: "\e006";
}

.ksf-dim-star::before {
  content: "\e007";
}

